--- a/templates/django_registration/registration_complete.html
+++ b/templates/django_registration/registration_complete.html
@@ -3,5 +3,6 @@
 {% block main %}
   <div class="container-xl">
     <p>Вам на почту отправлено письмо с ссылкой для активации учетной записи.</p>
+    <p>Не забудьте проверить "Спам" :)</p>
   </div>
 {% endblock %}
