--- a/templates/django_registration/registration_closed.html
+++ b/templates/django_registration/registration_closed.html
@@ -1,7 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'centered.html' %}
 
-{% block main %}
-  <div class="container-xl">
-    Регистрация закрыта, приходите позднее.
-  </div>
+{% block content %}
+  <p>Регистрация закрыта, приходите позднее.</p>
 {% endblock %}
