--- a/templates/note/note_list.html
+++ b/templates/note/note_list.html
@@ -1,33 +1,43 @@
 {% extends 'base.html' %}
 
 {% block main %}
-  <div class="container-xl">
-    <form method="get">
-      <label>
-        Найти заметку:
-        <input type="search" name="q" value="{{ request.GET.q }}"/>
-        <input type="hidden" name="mode" value="{{ request.GET.mode }}"/>
-        <input type="hidden" name="page" value="1"/>
-      </label>
-      <button type="submit">Найти</button>
-    </form>
+  <form class="row g-3 align-items-center justify-content-center">
+    <div class="col-auto">
+      <label for="search">Найти заметку</label>
+    </div>
+    <div class="col-auto">
+      <input type="search" name="q" value="{{ request.GET.q }}"
+             class="form-control" id="search"
+             placeholder="Текст или заголовок"/>
+    </div>
+    <input type="hidden" name="mode" value="{{ request.GET.mode }}"/>
+    <input type="hidden" name="page" value="1"/>
+    <div class="col-auto">
+      <button type="submit" class="btn btn-primary">Найти</button>
+    </div>
+  </form>
 
-    {% for note in object_list %}
-      <p>{{ note.author }}</p>
-      <p>{{ note.title|default_if_none:'' }}</p>
-      <p><a href="{{ note.get_absolute_url }}">{{ note.text }}</a></p>
-    {% empty %}
-      <p>Пока нет заметок, которые вы можете видеть</p>
-    {% endfor %}
-
-    {% if is_paginated %}
-      {% if prev_url %}
-        <a href="{{ prev_url }}">Предыдущая</a>
-      {% endif %}
-      {{ page_obj.number }}
-      {% if next_url %}
-        <a href="{{ next_url }}">Следующая</a>
-      {% endif %}
-    {% endif %}
+  <div class="container">
+    <div class="row">
+      {% for note in object_list %}
+        <div class="col-xl-4 col-md-6">
+          {% include 'partial/note.html' %}
+        </div>
+      {% empty %}
+        <p class="centered-content">Пока нет подходящих заметок :(</p>
+      {% endfor %}
+    </div>
   </div>
+
+  {% if is_paginated %}
+    <ul class="pagination justify-content-center mt-3">
+      {% if prev_url %}
+        <li class="page-item"><a class="page-link" href="{{ prev_url }}">Предыдущая</a></li>
+      {% endif %}
+      <li class="page-item disabled"><a class="page-link" href="#" aria-disabled="true">{{ page_obj.number }}</a></li>
+      {% if next_url %}
+        <li class="page-item"><a class="page-link" href="{{ next_url }}">Следующая</a></li>
+      {% endif %}
+    </ul>
+  {% endif %}
 {% endblock %}
