--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,11 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Лучший чат</title>
+  <title>Заметки онлайн</title>
 
   <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
-        integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
         crossorigin="anonymous"
   />
   <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
@@ -19,7 +19,7 @@
 
 <body>
 <header class="header">
-  <div class="{% block header_container_class %}container-xl{% endblock %}">
+  <div class="container-xl">
     <a href="{% url 'profile' %}" class="header__profile">
       <img
               class="header__profile__img"
@@ -43,6 +43,11 @@
     </div>
   </div>
 </header>
-{% block main %}{% endblock %}
+
+<main class="main">
+  <div class="container-xl">
+    {% block main %}{% endblock %}
+  </div>
+</main>
 </body>
 </html>
