--- a/templates/django_registration/activation_failed.html
+++ b/templates/django_registration/activation_failed.html
@@ -1,8 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'centered.html' %}
 
-{% block main %}
-  <div class="container-xl">
-    <p>Не удалось активировать учетную запись :(</p>
-    <p>Попробуйте зарегистрироваться заново.</p>
-  </div>
+{% block content %}
+  <p>Не удалось активировать учетную запись :(</p>
+  <p>Попробуйте зарегистрироваться заново.</p>
 {% endblock %}
