--- a/templates/django_registration/registration_complete.html
+++ b/templates/django_registration/registration_complete.html
@@ -1,8 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'centered.html' %}
 
-{% block main %}
-  <div class="container-xl">
-    <p>Вам на почту отправлено письмо с ссылкой для активации учетной записи.</p>
-    <p>Не забудьте проверить "Спам" :)</p>
-  </div>
+{% block content %}
+  <p>Вам на почту отправлено письмо с ссылкой для активации учетной записи.</p>
+  <p>Не забудьте проверить "Спам" :)</p>
 {% endblock %}
