--- a/templates/django_registration/registration_form.html
+++ b/templates/django_registration/registration_form.html
@@ -1,11 +1,5 @@
 {% extends 'base.html' %}
 
 {% block main %}
-  <div class="container-xl">
-    <form method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit">Зарегистрироваться</button>
-    </form>
-  </div>
+  {% include 'partial/form.html' with btn_text='Зарегистрироваться' %}
 {% endblock %}
